--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
-      <link rel="stylesheet" href="src/styles.css">
+      <link rel="stylesheet" href="src/css/tradeStyles.css">
+      <link rel="stylesheet" href="src/css/planetStyles.css">
+      <link rel="stylesheet" href="src/css/globalStyles.css">
   </head>
   <body>
     <div id="app"></div>
