--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="src/css/tradeStyles.css">
       <link rel="stylesheet" href="src/css/planetStyles.css">
       <link rel="stylesheet" href="src/css/globalStyles.css">
+      <link rel="stylesheet" href="src/css/helpStyles.css">
   </head>
   <body>
     <div id="app"></div>
