--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="src/css/planetStyles.css">
       <link rel="stylesheet" href="src/css/globalStyles.css">
       <link rel="stylesheet" href="src/css/helpStyles.css">
+      <link rel="stylesheet" href="src/css/loginStyles.css">
   </head>
   <body>
     <div id="app"></div>
